--- a/_config.yml
+++ b/_config.yml
@@ -21,20 +21,20 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "LinkedIn.jpg"
+  avatar           : "LinkedIn.png"
   name             : "Haozhe(Steven) Liu"
   pronouns         : 
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Hoboken, NJ."
+  employer         : "Stevens Institute of Technology"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "hliu95@stevens.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : ""
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
