--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "LinkedIn.png"
   name             : "Haozhe(Steven) Liu"
   pronouns         : 
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Enthusiastic about developing AI technologies to solve real-world problems."
   location         : "Hoboken, NJ."
   employer         : "Stevens Institute of Technology"
   uri              : # URL
